[Product]: Implementing documentation with swagger
