# src/infra/product/api/route/product.routes.ts
@@ -3,16 +3,16 @@ import ProductController from '../controller/product.controller';
 
 const productRouter = Router();
 
-productRouter.post('/', async (req: Request, res: Response) => {
+productRouter.post('/create', async (req: Request, res: Response) => {
    await ProductController.create(req, res);
 });
 
-productRouter.put('/:id', async (req: Request, res: Response) => {
-   await ProductController.update(req, res);
+productRouter.get('/find/:id', async (req: Request, res: Response) => {
+   await ProductController.find(req, res);
 });
 
-productRouter.get('/:id', async (req: Request, res: Response) => {
-   await ProductController.find(req, res);
+productRouter.put('/update/:id', async (req: Request, res: Response) => {
+   await ProductController.update(req, res);
 });
 
 productRouter.get('/', async (req: Request, res: Response) => {
